--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Happy 18th Birthday CrossFit South Brooklyn</title>
+    <meta name="description" content="18 years of CrossFit South Brooklyn workouts—explore trends, milestones, and movement stories across the full history." />
+
+    <!-- Open Graph (iMessage / social previews) -->
+    <meta property="og:title" content="Happy 18th Birthday CrossFit South Brooklyn" />
+    <meta property="og:description" content="Explore 18 years of workouts: milestones, top movements, and more." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/favicon.svg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Happy 18th Birthday CrossFit South Brooklyn" />
+    <meta name="twitter:description" content="Explore 18 years of workouts: milestones, top movements, and more." />
+    <meta name="twitter:image" content="/favicon.svg" />
   </head>
   <body>
     <div id="root"></div>
