--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy 18th Birthday CrossFit South Brooklyn</title>
     <meta name="description" content="18 years of CrossFit South Brooklyn workouts—explore trends, milestones, and movement stories across the full history." />
@@ -11,13 +13,16 @@
     <meta property="og:title" content="Happy 18th Birthday CrossFit South Brooklyn" />
     <meta property="og:description" content="Explore 18 years of workouts: milestones, top movements, and more." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/favicon.svg" />
+    <meta property="og:image" content="og-image.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Happy 18th Birthday CrossFit South Brooklyn" />
     <meta name="twitter:description" content="Explore 18 years of workouts: milestones, top movements, and more." />
-    <meta name="twitter:image" content="/favicon.svg" />
+    <meta name="twitter:image" content="og-image.png" />
   </head>
   <body>
     <div id="root"></div>
